--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist
+#/dist (comentada para que no se ignore la carpeta dist)
 /tmp
 /out-tsc
 /bazel-out
