--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/mi-portfolio",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
